feat: change the pagination from offset to pointer
